--- a/src/components/about/Main.astro
+++ b/src/components/about/Main.astro
@@ -111,7 +111,7 @@ const ariaLabel = "Abrir CV";
     <div class="flex flex-col items-center mt-4">
       <div class="flex items-center gap-2 mb-2">
         <span class="text-sky-700">●</span>
-        <h3 class="text-xl md:text-2xl font-medium text-gray-700">
+        <h3 class="text-center text-xl md:text-2xl font-medium text-gray-700">
           {role}
         </h3>
         <span class="text-sky-500">●</span>
